  an ferror() call.

- Bug #1085744:  Add missing overflow check to PySequence_Tuple().
  Make resize schedule linear (amortized).

- marshal.dumps() no longer crashes when the optional argument ``version``
  is provided.


Extension Modules
-----------------

- Patch #1093585: raise a ValueError for negative history items in readline.
  {remove_history,replace_history}


Library
-------

- Patch #1117454: Remove code to special-case cookies without values
  in LWPCookieJar.

- Patch #1117339: Add cookielib special name tests.

- Patch #1112812: Make bsddb/__init__.py more friendly for modulefinder.

- Patch #1121234: Properly cleanup _exit and tkerror commands.

- Applied a security fix to SimpleXMLRPCserver (PSF-2005-001).  This
  disables recursive traversal through instance attributes, which can
  be exploited in various ways.

- Bug #1110478: Revert os.environ.update to do putenv again.

- Bug #1103844: fix distutils.install.dump_dirs() with negated options.

- Bug #1067732: wininst --install-script doesn't leave residual files anymore.

- StringIO.truncate() now correctly adjusts the size attribute.
  (Bug #951915).

- The decimal module wouldn't run on builds without threads (Bug #1083645).

- Bug #1086555:  Fix leak in syslog module.

- atexit.register no longer references the sys module before importing it.
  (Bug #1083202).

- unittest.TestCase.run() and unittest.TestSuite.run() can now be successfully
  extended or overridden by subclasses.  Formerly, the subclassed method would
  be ignored by the rest of the module.  (Bug #1078905).

- Bug #1076985: ``codecs.StreamReader.readline()`` now calls ``read()`` only
  once when a size argument is given. This prevents a buffer overflow in the
  tokenizer with very long source lines.

- Bug #1083110: ``zlib.decompress.flush()`` would segfault if called immediately
  after creating the object, without any intervening ``.decompress()`` calls.

Build
-----

- term.h is now properly detected again.
