@@ -40,6 +40,9 @@ Extension Modules
 Library
 -------
 
+- Patch #1103407: Properly deal with tarfile iterators when untarring
+  symbolic links on Windows.
+
 - Patch #1117454: Remove code to special-case cookies without values
   in LWPCookieJar.
 
